replace Double(double) with Double.valueOf